# terrpg

./: .gitignore  CMakeLists.txt  Config.cmake.in  GameEngine.cpp  GameEngine.h  README.md  main.cpp  oldgame.txt  rpg
docs/command/: entity.md  item.md  map.md  npc.md  scoreboard.md  teleport.md  trigger.md
example/: moren.txt  test.txt
include/: GameEngine.h  GameMap.h  GameObject.h  GameState.h  Log.h
include/Commands/: CommandHandler.h  CommandParser.h  CommandUtils.h  LegacyCommandTranslator.h
include/Commands/ConcreteCommands/: EntityCommand.h  ItemCommand.h  MapCommand.h  NpcCommand.h  ScoreboardCommand.h  TeleportCommand.h  TriggerCommand.h
include/GameEngine/: ConditionEvaluator.h  DialogSystem.h  GameEngine.h  GameMap.h  GameObject.h  GameState.h  InputHandler.h  InventoryManager.h  Renderer.h  SaveLoadManager.h
include/terrpg/commands/: Command.h
include/terrpg/common/: Exceptions.h  Types.h
include/terrpg/core/: GameMap.h  GameObject.h  GameState.h
include/terrpg/core/scripting/: Condition.h  Expression.h  Parser.h  ScriptBlock.h
include/terrpg/utils/: FileUtils.h  StringUtils.h
src/: GameEngine.cpp  GameEngine.h  GameMap.cpp  GameObject.cpp  Log.cpp  main.cpp
src/Commands/: CommandParser.cpp  CommandUtils.cpp  LegacyCommandTranslator.cpp
src/Commands/ConcreteCommands/: EntityCommand.cpp  ItemCommand.cpp  MapCommand.cpp  NpcCommand.cpp  ScoreboardCommand.cpp  TeleportCommand.cpp  TriggerCommand.cpp
src/GameEngine/: Commands.cpp  ConditionEvaluator.cpp  DialogSystem.cpp  GameEngine.cpp  InputHandler.cpp  InventoryManager.cpp  LoadSave.cpp  Logic.cpp  Renderer.cpp  Rendering.cpp  SaveLoadManager.cpp
src/commands/: MapCommands.cpp
src/core/: GameState.h
src/core/gameobjects/: GameMap.cpp  GameObject.cpp
src/core/scripting/: Expression.cpp  Parser.cpp  ScriptBlock.cpp
src/utils/: FileUtils.cpp  StringUtils.cpp
